# linux-internals-reimplemented

./: .gitignore  README  bases_converter  hello  hello.c  id1_id2_bc.c
interprocess_communication/: CMakeLists.txt  Makefile  message_reader.c  message_sender.c  message_slot.c  message_slot.h  tester.sh
ipc/: Makefile  message_reader.c  message_sender.c  message_slot.c  message_slot_tester.sh
queue/: queue.c  queue_test.c  test_the_queue.sh
shell/: myshell.c  shell.c  tester.sh
